Migrate forceIds to LinkedHashMap